--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,44 +339,44 @@ workflows:
         - package_dependencies:
             requires:
               - checkout_code
-        - test_cases:
-            requires:
-              - package_dependencies
-        - upload-coverage:
-            requires:
-              - package_dependencies
-              - test_cases
-            filters:
-              branches:
-                only: /^(master|live)$/
+        # - test_cases:
+        #     requires:
+        #       - package_dependencies
+        # - upload-coverage:
+        #     requires:
+        #       - package_dependencies
+        #       - test_cases
+        #     filters:
+        #       branches:
+        #         only: /^(master|live)$/
         - www_build:
             requires:
               - package_dependencies
-              - test_cases
+              # - test_cases
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(ember-upgrade|master|live)$/
         - www-deploy:
             requires:
               - www_build
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(ember-upgrade|master|live)$/
         - ember_cordova_build:
             requires:
-              - test_cases
+              - package_dependencies
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(ember-upgrade|master|live)$/
         - android_build_and_deploy:
             requires:
               - ember_cordova_build
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(ember-upgrade|master|live)$/
         - ios_build_and_deploy:
             requires:
-              - test_cases
+              - package_dependencies
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(ember-upgrade|master|live)$/
