--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "1.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
-    "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
+    "ember-cli-pagination": "3.1.5",
     "ember-cli-photoswipe": "1.1.0",
     "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^1.0.0-beta.2",
