--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "0.9.0",
     "ember-data": "^3.1.0",
+    "ember-data-factory-guy": "git://github.com/crossroads/ember-data-factory-guy.git#version-2.7",
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
     "ember-form-validator": "1.0.5",
