--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -355,28 +355,28 @@ workflows:
               # - test_cases
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(master|live|GCW-2980-account-details-page-not-visible-ie)$/
         - www-deploy:
             requires:
               - www_build
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(master|live|GCW-2980-account-details-page-not-visible-ie)$/
         - ember_cordova_build:
             requires:
               - package_dependencies
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(master|live|GCW-2980-account-details-page-not-visible-ie)$/
         - android_build_and_deploy:
             requires:
               - ember_cordova_build
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(master|live|GCW-2980-account-details-page-not-visible-ie)$/
         - ios_build_and_deploy:
             requires:
               - package_dependencies
             filters:
               branches:
-                only: /^(master|live)$/
+                only: /^(master|live|GCW-2980-account-details-page-not-visible-ie)$/
