--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "ember-cli-photoswipe": "1.1.0",
     "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^1.0.0-beta.2",
-    "ember-cli-sass": "^7.2.0",
+    "ember-cli-sass": "5.5.2",
     "ember-cli-slick-carousel": "0.0.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "2.2.0",
