--- a/package.json
+++ b/package.json
@@ -112,8 +112,10 @@
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
     "cordova-update-config": "^1.0.2",
+    "ember-browserify": "^1.2.2",
     "jquery": "^3.2.0",
     "phantomjs-prebuilt": "^2.1.16",
+    "tributejs": "^5.1.3",
     "yarn": "^1.19.1"
   }
 }
