--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "ember-ajax": "^5.0.0",
+    "ember-browserify": "^1.2.2",
     "ember-cli": "2.15.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "6.8.0",
@@ -112,8 +113,8 @@
     "cordova": "^6.5.0",
     "cordova-lib": "https://github.com/crossroads/goodcity-lib.git#master",
     "cordova-update-config": "^1.0.2",
-    "ember-browserify": "^1.2.2",
     "jquery": "^3.2.0",
+    "message-textbox": "git://github.com/crossroads/message-textbox#master",
     "phantomjs-prebuilt": "^2.1.16",
     "tributejs": "^5.1.3",
     "yarn": "^1.19.1"
