--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -367,13 +367,13 @@ workflows:
               - package_dependencies
             filters:
               branches:
-                only: /^(master|live|Fix-failing-android-build)$/
+                only: /^(master|live)$/
         - android_build_and_deploy:
             requires:
               - ember_cordova_build
             filters:
               branches:
-                only: /^(master|live|Fix-failing-android-build)$/
+                only: /^(master|live)$/
         - ios_build_and_deploy:
             requires:
               - package_dependencies
