changed resolver configuration

--- a/package.json
+++ b/package.json
@@ -66,8 +66,8 @@
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
     "ember-cli-photoswipe": "1.1.0",
-    "ember-cli-qunit": "2.2.6",
     "ember-cli-release": "^1.0.0-beta.2",
+    "ember-qunit": "^4.1.1",
     "ember-cli-sass": "5.5.2",
     "ember-cli-slick-carousel": "0.0.0",
     "ember-cli-sri": "^2.1.1",
@@ -75,6 +75,7 @@
     "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "0.9.0",
     "ember-data": "^3.1.0",
+    "ember-data-factory-guy": "2.18.0",
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
     "ember-form-validator": "1.0.5",
