--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "2.15.1",
+    "ember-cli": "~2.18.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "6.8.0",
     "ember-cli-code-coverage": "^0.4.2",
