--- a/package.json
+++ b/package.json
@@ -51,9 +51,9 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "ember-ajax": "^5.0.0",
-    "ember-cli": "~2.18.0",
+    "ember-cli": "~3.8.0",
     "ember-cli-app-version": "^3.2.0",
-    "ember-cli-babel": "6.8.0",
+    "ember-cli-babel": "^7.1.2",
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
     "ember-cli-content-security-policy": "^1.1.1",
@@ -61,8 +61,8 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-google-analytics": "^1.5.0",
     "ember-cli-html5-validation": "0.2.4",
-    "ember-cli-htmlbars": "^2.0.3",
-    "ember-cli-htmlbars-inline-precompile": "1.0.0",
+    "ember-cli-htmlbars": "^3.0.0",
+    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
     "ember-cli-photoswipe": "1.1.0",
@@ -74,7 +74,7 @@
     "ember-cli-test-loader": "2.2.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "0.9.0",
-    "ember-data": "^3.1.0",
+    "ember-data": "~3.8.0",
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
     "ember-form-validator": "1.0.5",
