--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ember-cli": "~3.8.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.1.2",
+    "ember-source": "~3.8.0",
     "ember-cli-code-coverage": "^0.4.2",
     "ember-cli-coffeescript": "^1.16.1",
     "ember-cli-content-security-policy": "^1.1.1",
@@ -61,6 +62,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-google-analytics": "^1.5.0",
     "ember-cli-html5-validation": "0.2.4",
+    "ember-cli-shims": "1.2.0",
     "ember-cli-htmlbars": "^3.0.0",
     "ember-cli-htmlbars-inline-precompile": "^1.0.3",
     "ember-cli-inject-live-reload": "^2.0.2",
@@ -71,6 +73,7 @@
     "ember-cli-sass": "5.5.2",
     "ember-cli-slick-carousel": "0.0.0",
     "ember-cli-sri": "^2.1.1",
+    "eslint-plugin-ember": "^5.2.0",
     "ember-cli-test-loader": "2.2.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-concurrency": "0.9.0",
@@ -97,7 +100,7 @@
     "glob": "^7.1.6",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
-    "liquid-fire": "~0.29.5",
+    "liquid-fire": "0.31.0",
     "loader.js": "^4.7.0",
     "morgan": "^1.9.1",
     "node-sass": "^4.13.0",
