:recycle: Refactor benficiary related code. Remove ember-concurrancy package

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.10.2",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "active-model-adapter": "2.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "body-parser": "^1.19.0",
     "broccoli-asset-rev": "^3.0.0",
     "broccoli-clean-css": "^2.0.1",
@@ -73,7 +74,6 @@
     "ember-cli-sri": "^2.1.1",
     "ember-cli-test-loader": "2.2.0",
     "ember-cli-uglify": "^3.0.0",
-    "ember-concurrency": "0.9.0",
     "ember-data": "^3.1.0",
     "ember-disable-proxy-controllers": "^1.0.2",
     "ember-export-application-global": "^2.0.0",
