--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "cors": "^2.8.5",
     "cross-env": "^6.0.3",
     "ember-ajax": "^5.0.0",
+    "ember-auto-import": "^1.11.2",
     "ember-cli": "2.15.1",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "6.8.0",
@@ -65,9 +66,10 @@
     "ember-cli-htmlbars": "^2.0.3",
     "ember-cli-htmlbars-inline-precompile": "1.0.0",
     "ember-cli-inject-live-reload": "^2.0.2",
+    "ember-cli-mirage": "0.2.0",
     "ember-cli-pagination": "crossroads/ember-cli-pagination#upgrade-to-latest",
     "ember-cli-photoswipe": "1.1.0",
-    "ember-cli-qunit": "2.2.6",
+    "ember-qunit": "^4.1.1",
     "ember-cli-release": "^1.0.0-beta.2",
     "ember-cli-sass": "5.5.2",
     "ember-cli-slick-carousel": "0.0.0",
