--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -380,9 +380,9 @@ workflows:
             filters:
               branches:
                 only: /^(master|live)$/
-        - ios_build_and_deploy:
-            requires:
-              - package_dependencies
-            filters:
-              branches:
-                only: /^(master|live)$/
+        # - ios_build_and_deploy:
+        #     requires:
+        #       - package_dependencies
+        #     filters:
+        #       branches:
+        #         only: /^(master|live)$/
