Moving to android 30

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,13 @@ testem.log
 
 # cordova
 cordova/www
+cordova/assets/www
 cordova/platforms
 cordova/plugins/*
 cordova/.secret_keys
+cordova/node_modules
+cordova/google-services.json
+cordova/ul_web_hooks
 
 # iOS
 *.xcuserdatad
