--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -302,18 +302,18 @@ workflows:
             - package_dependencies
           filters:
             branches:
-              only: /^(master|live)$/
+              only: /^(master|live|GCW-3746-android-api-30)$/
       - android_build_and_deploy:
           requires:
             - test_cases
             - ember_cordova_build
           filters:
             branches:
-              only: /^(master|live)$/
-      - ios_build_and_deploy:
-          requires:
-            - test_cases
-            - ember_cordova_build
-          filters:
-            branches:
-              only: /^(master|live)$/
+              only: /^(master|live|GCW-3746-android-api-30)$/
+      # - ios_build_and_deploy:
+      #     requires:
+      #       - test_cases
+      #       - ember_cordova_build
+      #     filters:
+      #       branches:
+      #         only: /^(master|live)$/
