We don't run tests at the moment... argh!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,9 +276,9 @@ workflows:
       - package_dependencies:
           requires:
             - checkout_code
-      - test_cases:
-          requires:
-            - package_dependencies
+      # - test_cases:
+      #     requires:
+      #       - package_dependencies
       - www_build:
           requires:
             - package_dependencies
